{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Map",
            "id": "8ef6cbab-bd69-4eec-9367-e45bcf8a3d59",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "880f7463-25e6-4855-80e3-b0639fcd7a24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "9dd8cee6-14ec-4a13-896c-bcc8267b1e3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e38a223b-4433-40c0-b5fb-f31511dbecbf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PreviousHero",
                    "type": "Button",
                    "id": "7ad75454-90cb-4cb9-8d3e-7a27c35cfb05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextHero",
                    "type": "Button",
                    "id": "f913a0b9-4ff5-4b63-a3fc-6881c4ec67e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c2bfc736-965f-4998-9c30-a0cfa5e45796",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57080f14-1ff7-4f59-883c-b5ffef140eaf",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "de56900f-3cb7-4f58-8dfc-6f8ec0556877",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "1e8a388c-ceec-40e2-b88e-2fe9339d70a1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "f4514b30-2e35-45c5-ae02-0785d97a70a8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "9889d99f-9d9a-4206-a317-e73546eb5e4c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "0d635a55-bbcb-4416-ac27-fd6d8c1730a0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d7ba7273-5312-497f-b50b-f42b0072dd23",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousHero",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9346bcdd-d99b-4803-a4fc-1bc0c0d26041",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextHero",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Battle",
            "id": "1e39abb9-5de9-4c7a-a49a-f1edc2fc3ac4",
            "actions": [],
            "bindings": []
        },
        {
            "name": "UI",
            "id": "d10b5675-7f35-4ccb-b621-38f2b20c3141",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": []
}